fixed overlap

--- a/Trackfully-Client/src/app/landing-page/landing-page.component.css
+++ b/Trackfully-Client/src/app/landing-page/landing-page.component.css
@@ -7,6 +7,7 @@
 	flex-wrap: wrap;
 	width: 100vw;
 	margin-left: 75px;
+	float: left;
 }
 
 @media (max-width: 768px) {
