--- a/Trackfully-Client/src/app/slider/slider.component.css
+++ b/Trackfully-Client/src/app/slider/slider.component.css
@@ -4,6 +4,7 @@
 	display: flex;
   flex-direction: row;
   position: relative;
+  float:right;
 }
 
 @media (max-width: 1000px) {
